fixtures/python/fallback/should_pass/proper_error_handling.py
try:
    result = risky_operation()
except ValueError as e:
    logger.error("Operation failed: %s", e)
    raise
