fixtures/python/fallback/should_fail/except_pass.py
try:
    result = risky_operation()
except Exception:
    pass

try:
    connect()
except ConnectionError as e:
    pass
